@@ -1,3 +1,11 @@
+2009-10-28 S. Thiell <stephane.thiell@cea.fr>
+
+	* Task.py: fix called method when using worker.iter_node_retcodes();
+	fix called method when using worker.node_rc().
+
+	* Improved tests code coverage, also resulting in some fixes (see
+	above).
+
 2009-08-08 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.1 RC 6 released.
